kustomize/base/aas-tools-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aas-too-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: aas-too
  sessionAffinity: None
  type: ClusterIP
