kustomize/base/aas-tools-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aas-tools
  # annotations:
  #     kubernetes.io/ingress.class: nginx-red-internal
spec:
  ingressClassName: nginx
  rules:
  - host: application.local.url
    http:
      paths:
      - backend:
          serviceName: aas-too-svc
          servicePort: 80
  tls:
  - hosts:
    - application.local.url
