kustomize/base/aas-tools-network-policy.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  # namespace: cd-acc
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: nginx-ingress
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: aas-too
  policyTypes:
  - Ingress
